--- a/Code/Feedback/web-feedback-system/WebContent/WEB-INF/web.xml
+++ b/Code/Feedback/web-feedback-system/WebContent/WEB-INF/web.xml
@@ -1,40 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>web-feedback-system</display-name>
-  <servlet>
-    <servlet-name>login</servlet-name>
-    <servlet-class>wfs.l2t.controller.ControllerLogin</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>login</servlet-name>
-    <url-pattern>/login</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>login</servlet-name>
-    <url-pattern>/notification</url-pattern>
-  </servlet-mapping>
-  <context-param>
-    <param-name>host</param-name>
-    <param-value>smtp.gmail.com</param-value>
-  </context-param>
-  <context-param>
-    <param-name>port</param-name>
-    <param-value>587</param-value>
-  </context-param>
-  <context-param>
-    <param-name>user</param-name>
-    <param-value>uit.recsys@gmail.com</param-value>
-  </context-param>
-  <context-param>
-    <param-name>pass</param-name>
-    <param-value>l2t_recsys</param-value>
-  </context-param>
-  <welcome-file-list>
-    <welcome-file>view/theme.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	id="WebApp_ID" version="3.0">
+	<display-name>web-feedback-system</display-name>
+	<servlet>
+		<servlet-name>settings</servlet-name>
+		<servlet-class>wfs.l2t.controller.ControllerSetting</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>settings</servlet-name>
+		<url-pattern>/settings</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>home</servlet-name>
+		<servlet-class>wfs.l2t.controller.ControllerHome</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>home</servlet-name>
+		<url-pattern>/home</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>login</servlet-name>
+		<servlet-class>wfs.l2t.controller.ControllerLogin</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>login</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>login</servlet-name>
+		<url-pattern>/notification</url-pattern>
+	</servlet-mapping>
+	<context-param>
+		<param-name>host</param-name>
+		<param-value>smtp.gmail.com</param-value>
+	</context-param>
+	<context-param>
+		<param-name>port</param-name>
+		<param-value>587</param-value>
+	</context-param>
+	<context-param>
+		<param-name>user</param-name>
+		<param-value>uit.recsys@gmail.com</param-value>
+	</context-param>
+	<context-param>
+		<param-name>pass</param-name>
+		<param-value>l2t_recsys</param-value>
+	</context-param>
+
+
+
+	<welcome-file-list>
+		<welcome-file>home</welcome-file>
+	</welcome-file-list>
 </web-app>
