--- a/Code/Feedback/web-feedback-system/WebContent/WEB-INF/web.xml
+++ b/Code/Feedback/web-feedback-system/WebContent/WEB-INF/web.xml
@@ -16,7 +16,15 @@
   <servlet-mapping>
     <servlet-name>account</servlet-name>
     <url-pattern>/account</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping> 
+  <servlet>
+    <servlet-name>recommendation</servlet-name>
+    <servlet-class>wfs.l2t.controller.ControllerJobRecommended</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>recommendation</servlet-name>
+    <url-pattern>/recommendation</url-pattern>
+  </servlet-mapping>  
   <servlet>
     <servlet-name>home</servlet-name>
     <servlet-class>wfs.l2t.controller.ControllerHome</servlet-class>
