--- a/Code/Feedback/web-feedback-system/WebContent/WEB-INF/web.xml
+++ b/Code/Feedback/web-feedback-system/WebContent/WEB-INF/web.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>web-feedback-system</display-name>
+  
+    <servlet>
+    <servlet-name>help</servlet-name>
+    <servlet-class>wfs.l2t.controller.ControllerHelp</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>help</servlet-name>
+    <url-pattern>/help</url-pattern>
+  </servlet-mapping>
+    
   <servlet>
     <servlet-name>settings</servlet-name>
     <servlet-class>wfs.l2t.controller.ControllerSetting</servlet-class>
@@ -30,11 +40,11 @@
     <servlet-class>wfs.l2t.controller.ControllerCareJob</servlet-class>
   </servlet>
   <servlet>
-      <servlet-name>ListResume</servlet-name>
+      <servlet-name>listresume</servlet-name>
       <servlet-class>wfs.l2t.controller.ControllerListResume</servlet-class>
   </servlet>
   <servlet>
-      <servlet-name>Resume</servlet-name>
+      <servlet-name>resume</servlet-name>
       <servlet-class>wfs.l2t.controller.ControllerResume</servlet-class>
   </servlet>
   <servlet-mapping>
@@ -62,11 +72,11 @@
     <url-pattern>/notification</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-      <servlet-name>ListResume</servlet-name>
+      <servlet-name>listresume</servlet-name>
       <url-pattern>/listresume</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-      <servlet-name>Resume</servlet-name>
+      <servlet-name>resume</servlet-name>
       <url-pattern>/resume</url-pattern>
   </servlet-mapping>
   <context-param>
