--- a/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/.classpath
+++ b/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/.classpath
@@ -3,11 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_20">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
@@ -15,5 +10,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Luanft/Desktop/Junit Test/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Luanft/Desktop/Junit Test/junit-4.12.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
