--- a/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/WebContent/WEB-INF/web.xml
+++ b/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/WebContent/WEB-INF/web.xml
@@ -33,6 +33,10 @@
     <servlet-name>statistic</servlet-name>
     <url-pattern>/statistic</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>statistic</servlet-name>
+    <url-pattern>/jobList</url-pattern>
+  </servlet-mapping>
   <servlet>
     <servlet-name>recommendation</servlet-name>
     <servlet-class>wfs.l2t.controller.ControllerJobRecommended</servlet-class>
