Hoành chỉnh trang thống kế - Thảo

--- a/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/.settings/org.eclipse.core.resources.prefs
+++ b/Release/SYSTEM_RELEASE/Source/Feedback/web-feedback-system/.settings/org.eclipse.core.resources.prefs
@@ -7,6 +7,7 @@ encoding//src/wfs/l2t/controller/ControllerAccount.java=UTF-8
 encoding//src/wfs/l2t/controller/ControllerCareJob.java=UTF-8
 encoding//src/wfs/l2t/controller/ControllerCheckRegister.java=UTF-8
 encoding//src/wfs/l2t/controller/ControllerConfirmEmail.java=UTF-8
+encoding//src/wfs/l2t/controller/ControllerForgotPassword.java=UTF-8
 encoding//src/wfs/l2t/controller/ControllerHome.java=UTF-8
 encoding//src/wfs/l2t/controller/ControllerJobRecommended.java=UTF-8
 encoding//src/wfs/l2t/controller/ControllerListResume.java=UTF-8
@@ -14,3 +15,4 @@ encoding//src/wfs/l2t/controller/ControllerLogin.java=UTF-8
 encoding//src/wfs/l2t/controller/ControllerResume.java=UTF-8
 encoding//src/wfs/l2t/controller/ControllerStatistic.java=UTF-8
 encoding//src/wfs/l2t/dto/dtoRecJobStatistic.java=UTF-8
+encoding//src/wfs/l2t/model/ModelStatistic.java=UTF-8
